--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,16 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://aceberg.github.io/wiki/'
 relativeURLs = false
+# baseURL = 'https://example.com'
 languageCode = 'en-us'
-title = 'My wiki'
+title = "Aceberg's wiki"
 theme = 'hugo-theme-relearn'
+
+[params]
+  alwaysopen = false  # default collapsed sidebar behavior
+
+
+[menu]
+  [[menu.shortcuts]]
+    name = '<i class="fa-brands fa-github"></i>&nbsp;&nbsp;GitHub'
+    url = 'https://github.com/aceberg'
+    weight = 1
